2008-05-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: Remove the .diff
	from the name of the automatically generated patch. It will
	facilitate the switch to this format: packages using
	patch system that apply debian/patches/*.{patch,diff}
	will not be bothered by the presence of the quilt serie
	created by dpkg-source itself.
	* man/dpkg-source.1: Update the documentation accordingly.
	* man/po/*.po: Fix all the filenames to avoid fuzzying
	translations.

2008-05-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: Add missing "use
	File::Path" for mkpath().

2008-05-13  Guillem Jover  <guillem@debian.org>

	* src/main.c (setforce): Add help output for '--force-breaks'.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.20~.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.19.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Get Package-Type field value also from
	custom field.

2008-05-11  Raphael Hertzog  <hertzog@debian.org>

	* src/processarc.c (process_archive): While removing files that
	disappeared, move the call to namenodetouse before the test
	that skips directory shared with other packages. This is required
	because namenodetouse() handles trigger activation and we really
	want directories containing (only) removed files to activate the
	corresponding triggers.

2008-05-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V2.pm,
	scripts/Dpkg/Source/Package/V3/quilt.pm: Ensure the
	.dpkg-source-applied stamp file is created when an automatic patch
	is created so that a second build doesn't try to mistakenly
	reapply it.

2008-05-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Functions.pm (is_binary): New function
	to check if a file is binary by using diff against it.
	* scripts/Dpkg/Source/Package/V2.pm: Check that all files from the