@@ -1,5 +1,12 @@
 2008-05-23  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package/V2.pm (do_build): Display a
+	message when local modifications are stored in a new
+	automatic patch. This messages includes a list of
+	modified files.
+
+2008-05-23  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V3/quilt.pm: Remove the .diff
 	from the name of the automatically generated patch. It will
 	facilitate the switch to this format: packages using
